fix(button): correct vertical align for icons in icon groups within buttons

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -624,6 +624,9 @@
   margin: @iconMargin;
   vertical-align: @iconVerticalAlign;
 }
+.ui.button:not(.icon) > .icons:not(.button):not(.dropdown) > .icon {
+  vertical-align: @iconVerticalAlign;
+}
 .ui.button:not(.icon) > .right.icon:not(.button):not(.dropdown) {
   margin: @rightIconMargin;
 }
